tests/diagnostics/catalog/snapshots/ir/IR0052.snap
error[IR0052]: IR_E_NON_EXHAUSTIVE_MATCH
 --> tests/diagnostics/catalog/sources/ir/IR0052.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0052
  = help: keep IR validation diagnostics structured and catalog-backed
